# ChangeLog for www-client/dwb
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  12 Jun 2011; Michael Weber <xmw@gentoo.org> dwb-9999.ebuild:
  Adjusting keywords

*dwb-9999 (04 Jun 2011)

  04 Jun 2011; Michael Weber <xmw@gentoo.org> +dwb-9999.ebuild, +metadata.xml:
  initial import
