@@ -2,6 +2,9 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  25 Jul 2011; Michael Weber <xmw@gentoo.org> dwb-9999.ebuild:
+  Switch to gtk+:3 and webkit-gtk:3
+
   12 Jun 2011; Michael Weber <xmw@gentoo.org> dwb-9999.ebuild:
   Adjusting keywords
 
